SampleExample/tea/tea-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea
  namespace: deployment-tea
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tea 
  template:
    metadata:
      labels:
        app: tea 
    spec:
      containers:
      - name: tea 
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
