SampleExample/tea/tea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
  namespace: deployment-tea
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: tea
