SampleExample/tea/ingress-tea.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress-tea
  namespace: deployment-tea
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tea-svc
          servicePort: 80
        path: /tea(/|$)(.*)
